# rdfss

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs  diesel.toml
migrations/2024-10-26-184127_init/: up.sql
migrations/2024-12-10-225755_chunk_to_delete/: up.sql
migrations/2024-12-10-232540_file_to_delete/: up.sql
migrations/2025-01-18-095016_chunks_parity_shard/: up.sql
proto/: healthcheck.proto
src/: lib.rs  schema.rs
src/master/: brain.rs  consul.rs  healthchecker.rs  master.rs  mod.rs  node_client.rs  router.rs
src/metadata/: models.rs  sql.rs
src/tracing/: init.rs
src/web/: master_router.rs  mod.rs  router.rs
src/worker/: consul.rs  mod.rs  router.rs  rpc.rs  storage.rs
tests/: tests.rs
